--- a/app/views/admin_pages/managecompany3.html.erb
+++ b/app/views/admin_pages/managecompany3.html.erb
@@ -86,10 +86,97 @@ span.ml-2.bill:hover {
                             </div>
                         </div>
 
+                        <div class="row mt-3">
+                            <div class="col-lg-12">
+                                <div class="row">
+                                    <div class="col-lg-12">
+                                        <h3 style="font-family: dosis">Your perks <span class="ml-2 bill" style="font-size: 14px; font-family: lato; border-bottom: 2px solid #00ADEE;">See all 234 Perks</span></h3>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="row mt-3">
+                            <div class="col-lg-3">
+                                <a href="#">
+                                    <div class="card bill" style="border: 1px solid rgba(0,0,0,.08);">
+                                        <img class="card-img-top img-fluid" src="/template-assets/images/nero.png" alt="Card image cap">
+                                        <div class="card-body">
+                                            <h3 class="card-title mb-3" style="font-family: dosis;">Your weekly coffee</h3>
+                                        
+                                                <div class="row mt-2" style="margin-bottom: -20px;">
+                                                    <div class="col-lg-8">
+                                                        <p class="mt-2" style="padding-top: 12px; color: #3D3D36;"><img src="/template-assets/images/voucher.png" style="max-width: 20px;"> Digital voucher</p>
+                                                    </div>
+                                                     <div class="col-lg-4">
+                                                        <h2 class="float-right mt-2 mb-0" style="font-family: dosis;">Free</h2>
+                                                    </div>
+                                                </div>
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                             
+                            <div class="col-lg-3">
+                                <div class="card bill" style="border: 1px solid rgba(0,0,0,.08);">
+                                    <img class="card-img-top img-fluid" src="/template-assets/images/odeon2.png" alt="Card image cap">
+                                    <div class="card-body">
+                                        <h3 class="card-title mb-3" style="font-family: dosis;">Your monthly cinema</h3>
+                                    
+                                            <div class="row mt-2" style="margin-bottom: -20px;">
+                                                <div class="col-lg-8">
+                                                    <p class="mt-2" style="padding-top: 12px;"><img src="/template-assets/images/voucher.png" style="max-width: 20px;"> Voucher</p>
+                                                </div>
+                                                 <div class="col-lg-4">
+                                                    <h2 class="float-right mt-2 mb-0" style="font-family: dosis;">Free</h2>
+                                                </div>
+                                            </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col-lg-3">
+                                <div class="card bill" style="border: 1px solid rgba(0,0,0,.08);">
+                                    <img class="card-img-top img-fluid" src="/template-assets/images/example.png" alt="Card image cap">
+                                    <div class="card-body">
+                                        <h3 class="card-title mb-3" style="font-family: dosis;">Example Offer</h3>
+                                    
+                                            <div class="row mt-2" style="margin-bottom: -20px;">
+                                                <div class="col-lg-8">
+                                                    <p class="mt-2" style="padding-top: 12px;">Example type</p>
+                                                </div>
+                                                 <div class="col-lg-4">
+                                                    <h2 class="float-right mt-2 mb-0" style="font-family: dosis;">Free</h2>
+                                                </div>
+                                            </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col-lg-3">
+                                <div class="card bill" style="border: 1px solid rgba(0,0,0,.08);">
+                                    <img class="card-img-top img-fluid" src="/template-assets/images/example.png" alt="Card image cap">
+                                    <div class="card-body">
+                                        <h3 class="card-title mb-3" style="font-family: dosis;">Example Offer</h3>
+                                    
+                                            <div class="row mt-2" style="margin-bottom: -20px;">
+                                                <div class="col-lg-9">
+                                                    <p class="mt-2" style="padding-top: 12px;">Example type</p>
+                                                </div>
+                                                 <div class="col-lg-3">
+                                                    <h2 class="float-right mt-2 mb-0" style="font-family: dosis;">Free</h2>
+                                                </div>
+                                            </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>
+
 
                              <div class="row mt-2">
                                     <div class="col-lg-6">
-                                        <h3 style="font-family: dosis">Your products</h3>
+                                        <h3 style="font-family: dosis">Your other products</h3>
                                     </div>
                             </div>
 
@@ -100,8 +187,8 @@ span.ml-2.bill:hover {
                                     <div class="pt-4 pb-2">
                                         <img src="/template-assets/images/users/Perks.png" class="rounded-circle img-thumbnail avatar-md" alt="profile-image">
 
-                                        <h3 class="mt-3"><a href="extras-profile.html" class="text-dark">Perks</a></h3>
-                                        <p class="mb-3">Hundreds of exclusive discounts and perks</p>
+                                        <h3 class="mt-3"><a href="extras-profile.html" class="text-dark">Medical</a></h3>
+                                        <p class="mb-3">Get 24/7 access to an online GP</p>
 
                                     </div> <!-- end .padding -->
                                 </div> <!-- end card-box-->
@@ -380,87 +467,53 @@ span.ml-2.bill:hover {
                             </div>
 
                         </div>
-                        
 
                  <div class="row mt-2">
-                    <div class="col-lg-6">
-                        <h3 style="font-family: dosis">Reward & recognition <span class="ml-2 bill" style="font-size: 14px; font-family: lato; border-bottom: 2px solid #00ADEE;">See all Recognition</span></h3>
+                            <div class="col-lg-6">
+                                <h3 style="font-family: dosis">Your other products</h3>
+                            </div>
                     </div>
-                </div>
+                        
 
-                    <div class="row mt-3">
-                        <div class="col-lg-6" style="padding-right: 0px;">
-                            <div class="card text-center" style="background-color: #f5f5f5; border-top-right-radius: 0px; border-bottom-right-radius: 0px;">
-                                <div class="card-body">
-                                    <div class="mx-auto">
-                                        <h3 class="card-title mb-2 pt-3" style="font-family: dosis;">Reward or recognise your team</h3>
-                                            <button type="button" class="btn btn-warning waves-effect waves-light mt-2 mb-5" style="color: #3D3D36">Let's go</button>
-                                        <div class="mx-auto">
-                                            <img src="/template-assets/images/ILLUSTRATION.png" class="mx-auto mb-4" style="max-width: 313px;">
-                                        </div>
-                                        
-                                    </div>
-                                </div>
+                 <div class="row mt-3 mb-4">
+
+                            <div class="col-lg-4">
+                                <div class="text-center card bill" style="border: 1px solid rgba(0,0,0,.08);">
+                                    <div class="pt-4 pb-2">
+                                        <img src="/template-assets/images/users/Perks.png" class="rounded-circle img-thumbnail avatar-md" alt="profile-image">
+
+                                        <h3 class="mt-3"><a href="extras-profile.html" class="text-dark">Medical</a></h3>
+                                        <p class="mb-3">Get 24/7 access to an online GP</p>
+
+                                    </div> <!-- end .padding -->
+                                </div> <!-- end card-box-->
                             </div>
-                        </div> 
-                        <div class="col-lg-6" style="padding-left: 0px;">
-                            <div class="card" style="border-top-left-radius: 0px; border-bottom-left-radius: 0px; border: 1px solid rgba(0,0,0,.08);">
-                                <div class="card-body">
-                                    <div class="row reward" style="padding-top:10px; padding-bottom:5px;">
-                                        <div class="col-lg-2">
-                                            <img src="/template-assets/images/users/user-5.jpg" class="rounded-circle avatar-sm" alt="friend">
-                                        </div>
-                                        <div class="col-lg-7">
-                                            <h4 style="font-family: dosis; font-weight: 600;" class="mt-0">Jamie Martin</h4>
-                                            <p style="font-family: dosis;">Recognised by Jane Doe</p>
-                                        </div>
-                                        <div class="col-lg-3">
-                                            <p class="" style="font-family:dosis">2 days ago</p>                                           
-                                        </div>
-                                    </div>
-                                    <hr>
-                                    <div class="row reward" style="padding-top:10px; padding-bottom:5px;">
-                                        <div class="col-lg-2">
-                                            <img src="/template-assets/images/users/user-3.jpg" class="rounded-circle avatar-sm" alt="friend">
-                                        </div>
-                                        <div class="col-lg-7">
-                                            <h4 style="font-family: dosis; font-weight: 600;" class="mt-0">Rick Beattie</h4>
-                                            <p style="font-family: dosis;">Recognised by Jane Doe</p>
-                                        </div>
-                                        <div class="col-lg-3">
-                                            <p class="" style="font-family:dosis">4 days ago</p>                                           
-                                        </div>
-                                    </div>
-                                    <hr>
-                                    <div class="row reward" style="padding-top:10px; padding-bottom:5px;">
-                                        <div class="col-lg-2">
-                                            <img src="/template-assets/images/users/user-2.jpg" class="rounded-circle avatar-sm" alt="friend">
-                                        </div>
-                                        <div class="col-lg-7">
-                                            <h4 style="font-family: dosis; font-weight: 600;" class="mt-0">Rachel James</h4>
-                                            <p style="font-family: dosis;">Recognised by Jane Doe</p>
-                                        </div>
-                                        <div class="col-lg-3">
-                                            <p class="" style="font-family:dosis">6 days ago</p>                                           
-                                        </div>
-                                    </div>
-                                    <hr>
-                                    <div class="row reward" style="padding-top:10px; padding-bottom:5px;">
-                                        <div class="col-lg-2">
-                                            <img src="/template-assets/images/users/user-1.jpg" class="rounded-circle avatar-sm" alt="friend">
-                                        </div>
-                                        <div class="col-lg-7">
-                                            <h4 style="font-family: dosis; font-weight: 600;" class="mt-0">Helen Rider</h4>
-                                            <p style="font-family: dosis;">Rewarded by Jane Doe</p>
-                                        </div>
-                                        <div class="col-lg-3">
-                                            <p class="" style="font-family:dosis">12 days ago                                         
-                                        </div>
-                                    </div>
-                                </div>
+
+                            <div class="col-lg-4">
+                                <div class="text-center card bill" style="border: 1px solid rgba(0,0,0,.08);">
+                                    <div class="pt-4 pb-2">
+                                        <img src="/template-assets/images/users/Recognition.png" class="rounded-circle img-thumbnail avatar-md" alt="profile-image">
+
+                                        <h3 class="mt-3"><a href="extras-profile.html" class="text-dark">Recognition</a></h3>
+                                        <p class="mb-3">Reward & recognise top performers</p>
+
+                                    </div> <!-- end .padding -->
+                                </div> <!-- end card-box-->
                             </div>
-                        </div>  
-                    </div>
+
+                            <div class="col-lg-4">
+                                <div class="text-center card bill" style="border: 1px solid rgba(0,0,0,.08);">
+                                    <div class="pt-4 pb-2">
+                                        <img src="/template-assets/images/users/Insights.png" class="rounded-circle img-thumbnail avatar-md" alt="profile-image">
+
+                                        <h3 class="mt-3"><a href="extras-profile.html" class="text-dark">Insights</a></h3>
+                                        <p class="mb-3">Measure and improve employee engagement</p>
+
+                                    </div> <!-- end .padding -->
+                                </div> <!-- end card-box-->
+                            </div>
+
+                        </div>
 
                 <div class="row mt-2">
                     <div class="col-lg-6">
