--- a/app/views/admin_pages/managecompany3.html.erb
+++ b/app/views/admin_pages/managecompany3.html.erb
@@ -187,7 +187,7 @@ span.ml-2.bill:hover {
                                     <div class="pt-4 pb-2">
                                         <img src="/template-assets/images/users/Perks.png" class="rounded-circle img-thumbnail avatar-md" alt="profile-image">
 
-                                        <h3 class="mt-3"><a href="extras-profile.html" class="text-dark">Medical</a></h3>
+                                        <h3 class="mt-3"><a href="#" class="text-dark">Medical</a></h3>
                                         <p class="mb-3">Get 24/7 access to an online GP</p>
 
                                     </div> <!-- end .padding -->
@@ -199,7 +199,7 @@ span.ml-2.bill:hover {
                                     <div class="pt-4 pb-2">
                                         <img src="/template-assets/images/users/Recognition.png" class="rounded-circle img-thumbnail avatar-md" alt="profile-image">
 
-                                        <h3 class="mt-3"><a href="extras-profile.html" class="text-dark">Recognition</a></h3>
+                                        <h3 class="mt-3"><a href="#" class="text-dark">Recognition</a></h3>
                                         <p class="mb-3">Reward & recognise top performers</p>
 
                                     </div> <!-- end .padding -->
@@ -211,7 +211,7 @@ span.ml-2.bill:hover {
                                     <div class="pt-4 pb-2">
                                         <img src="/template-assets/images/users/Insights.png" class="rounded-circle img-thumbnail avatar-md" alt="profile-image">
 
-                                        <h3 class="mt-3"><a href="extras-profile.html" class="text-dark">Insights</a></h3>
+                                        <h3 class="mt-3"><a href="#" class="text-dark">Insights</a></h3>
                                         <p class="mb-3">Measure and improve employee engagement</p>
 
                                     </div> <!-- end .padding -->
@@ -482,7 +482,7 @@ span.ml-2.bill:hover {
                                     <div class="pt-4 pb-2">
                                         <img src="/template-assets/images/users/Perks.png" class="rounded-circle img-thumbnail avatar-md" alt="profile-image">
 
-                                        <h3 class="mt-3"><a href="extras-profile.html" class="text-dark">Medical</a></h3>
+                                        <h3 class="mt-3"><a href="#" class="text-dark">Medical</a></h3>
                                         <p class="mb-3">Get 24/7 access to an online GP</p>
 
                                     </div> <!-- end .padding -->
@@ -494,7 +494,7 @@ span.ml-2.bill:hover {
                                     <div class="pt-4 pb-2">
                                         <img src="/template-assets/images/users/Recognition.png" class="rounded-circle img-thumbnail avatar-md" alt="profile-image">
 
-                                        <h3 class="mt-3"><a href="extras-profile.html" class="text-dark">Recognition</a></h3>
+                                        <h3 class="mt-3"><a href="#" class="text-dark">Recognition</a></h3>
                                         <p class="mb-3">Reward & recognise top performers</p>
 
                                     </div> <!-- end .padding -->
@@ -506,7 +506,7 @@ span.ml-2.bill:hover {
                                     <div class="pt-4 pb-2">
                                         <img src="/template-assets/images/users/Insights.png" class="rounded-circle img-thumbnail avatar-md" alt="profile-image">
 
-                                        <h3 class="mt-3"><a href="extras-profile.html" class="text-dark">Insights</a></h3>
+                                        <h3 class="mt-3"><a href="#" class="text-dark">Insights</a></h3>
                                         <p class="mb-3">Measure and improve employee engagement</p>
 
                                     </div> <!-- end .padding -->
