--- a/app/views/admin_pages/managecompany3.html.erb
+++ b/app/views/admin_pages/managecompany3.html.erb
@@ -91,7 +91,7 @@ span.ml-2.bill:hover {
 
     
                 
-                <div class="row mb-2 mt-2">
+                <div class="row mb-0 mt-2">
                     <div class="col-6">
                         <h1 class="mb-3 mt-2" style="font-family: dosis; font-weight: 500;">Welcome back, <span class="underline">Jane</span>
                         </h1>
@@ -113,10 +113,10 @@ span.ml-2.bill:hover {
            
         <div id="div1">
             <div id = "3" style="display:block">
-                <div class="row mt-3 mb-4">
+                <div class="row mt-0 mb-4">
                     <div class="col-lg-12"> 
                         
-                        <div class="row mt-3">
+                        <div class="row mt-3" style="display:none">
                             <div class="col-lg-12">
                                 <a href="#">
                                     <div class="card bill" style="border: 1px solid rgba(0,0,0,.08);">
@@ -489,15 +489,15 @@ border-color: #adada2; background-color: #efefef;">
 
                             <div class="col-lg-3">
                                 <div class="card bill" style="border: 1px solid rgba(0,0,0,.08);">
-                                    <img class="card-img-top img-fluid" src="/template-assets/images/medical1.png" alt="Card image cap">
+                                    <img class="card-img-top img-fluid" src="/template-assets/images/example.png" alt="Card image cap">
                                     <div class="card-body">
-                                        <h3 class="card-title mb-3" style="font-family: dosis;">Perkbox Medical</h3>
+                                        <h3 class="card-title mb-3" style="font-family: dosis;">Example Offer</h3>
                                     
                                             <div class="row mt-2" style="margin-bottom: -20px;">
-                                                <div class="col-lg-8">
-                                                    <p class="mt-2" style="padding-top: 12px;">24/7 Online GP</p>
+                                                <div class="col-lg-9">
+                                                    <p class="mt-2" style="padding-top: 12px;">Example type</p>
                                                 </div>
-                                                 <div class="col-lg-4">
+                                                 <div class="col-lg-3">
                                                     <h2 class="float-right mt-2 mb-0" style="font-family: dosis;">Free</h2>
                                                 </div>
                                             </div>
