--- a/app/views/admin_pages/managecompany3.html.erb
+++ b/app/views/admin_pages/managecompany3.html.erb
@@ -141,7 +141,7 @@ span.ml-2.bill:hover {
                         <div class="row mt-3">
                             <div class="col-lg-12">
                                 <div class="row">
-                                    <div class="col-lg-12">
+                                    <div class="col-lg-6">
                                         <h3 style="font-family: dosis">Your perks <span class="ml-2 bill" style="font-size: 14px; font-family: lato; border-bottom: 2px solid #00ADEE;">See all 234 Perks</span></h3>
                                     </div>
                                 </div>
@@ -262,6 +262,13 @@ span.ml-2.bill:hover {
                                 <div class="text-center card bill grey" style="border-style: dashed;
 border-width: 0px;
 border-color: #adada2; background-color: #efefef;">
+                                <div class="row" style="margin-bottom: -25px;">
+                                    <div class="col-lg-6">
+                                        <p class="float-left mt-0 mb-0 ml-2 mt-1"><i class="fas fa-close"></i></p>
+                                    </div>
+                                    <div class="col-lg-6">
+                                    </div>
+                                </div>
                                     <div class="ribbon-wrapper">
                                         <div class="ribbon"><i class="fas fa-lock"></i> Unlock</div>
                                     </div>
@@ -440,11 +447,19 @@ border-color: #adada2; background-color: #efefef;">
 
         <div id="div3" style="display:none">
             <div id = "3" style="display:block">
+                <div class="row">
+                    <div class="col-lg-12">
+                                <div class="alert alert-secondary bg-secondary text-white border-0" role="alert" style="background-color: #b8b8ba !important;">
+                        Below is an example of what your employee's homepage will look like. Specific Perks shown may vary depending on their hobbies and preferences.
+                    </div>
+                </div>
+            </div>
                 <div class="row mt-3 mb-4">
                     <div class="col-lg-12"> 
                         <div class="row">
-                            <div class="col-lg-12">
+                            <div class="col-lg-6">
                                 <h3 style="font-family: dosis">Your perks <span class="ml-2 bill" style="font-size: 14px; font-family: lato; border-bottom: 2px solid #00ADEE;">See all 234 Perks</span></h3>
+                            </div>
                             </div>
                         </div>
                         
@@ -524,6 +539,7 @@ border-color: #adada2; background-color: #efefef;">
                             </div>
 
                         </div>
+                    </div>
 
                  <div class="row mt-2">
                             <div class="col-lg-6">
