--- a/app/views/admin_pages/managecompany3.html.erb
+++ b/app/views/admin_pages/managecompany3.html.erb
@@ -264,7 +264,7 @@ border-width: 0px;
 border-color: #adada2; background-color: #efefef;">
                                 <div class="row" style="margin-bottom: -25px;">
                                     <div class="col-lg-6">
-                                        <p class="float-left mt-0 mb-0 ml-2 mt-1"><i class="fas fa-close"></i></p>
+                                        <p class="float-left mt-0 mb-0 ml-2 mt-1"><i class="fas fa-close" style="color: #888;"></i></p>
                                     </div>
                                     <div class="col-lg-6">
                                     </div>
@@ -275,8 +275,8 @@ border-color: #adada2; background-color: #efefef;">
                                     <div class="pt-4 pb-2">
                                         <img src="/template-assets/images/users/Insights.png" class="rounded-circle img-thumbnail avatar-md" alt="profile-image">
 
-                                        <h3 class="mt-3"><a href="#" class="text-dark">Insights</a></h3>
-                                        <p class="mb-3">Measure and improve employee engagement</p>
+                                        <h3 class="mt-3" style="color: #989891;"><a href="#" style="color: #989891;">Insights</a></h3>
+                                        <p class="mb-3" style="color: #989891;">Measure and improve employee engagement</p>
 
                                     </div> <!-- end .padding -->
                                 </div> <!-- end card-box-->
@@ -347,6 +347,7 @@ border-color: #adada2; background-color: #efefef;">
                     </div>
                     <div class="mx-auto">
                         <a href="" class="btn btn-light waves-effect waves-light" style="background-color: #fff; color: #3D3D36;" id="btn-archive">Cancel</a>
+                        <a href="" class="btn btn-warning waves-effect waves-light" style="color: #3D3D36;" id="btn-archive">Add another row</a>
                     </div>
                 </div>
             </div>
