--- a/app/views/admin_pages/managecompany3.html.erb
+++ b/app/views/admin_pages/managecompany3.html.erb
@@ -320,7 +320,7 @@ border-color: #adada2; background-color: #efefef;">
                             <div class="card-body">
                                 <div class="mx-auto">
                                     <i class="fas fa-plus mt-5"></i> 
-                                    <p class="mb-5 mt-2">Add link or video</p>
+                                    <p class="mb-5 mt-2">Add image, link or video</p>
                                 </div>
                             </div>
                         </div>
@@ -330,7 +330,7 @@ border-color: #adada2; background-color: #efefef;">
                             <div class="card-body">
                                 <div class="mx-auto">
                                     <i class="fas fa-plus mt-5"></i> 
-                                    <p class="mb-5 mt-2">Add link or video</p>
+                                    <p class="mb-5 mt-2">Add image, link or video</p>
                                 </div>
                             </div>
                         </div>
@@ -340,7 +340,7 @@ border-color: #adada2; background-color: #efefef;">
                             <div class="card-body">
                                 <div class="mx-auto">
                                     <i class="fas fa-plus mt-5"></i> 
-                                    <p class="mb-5 mt-2">Add link or video</p>
+                                    <p class="mb-5 mt-2">Add image, link or video</p>
                                 </div>
                             </div>
                         </div>
@@ -370,7 +370,7 @@ border-color: #adada2; background-color: #efefef;">
                                 <ul class="nav nav-tabs nav-bordered">
                                     <li class="nav-item" style="margin-left: 20px;">
                                         <a href="#home-b1" data-toggle="tab" aria-expanded="false" class="nav-link active">
-                                            <h4>Add link</h4>
+                                            <h4>Add image</h4>
                                         </a>
                                     </li>
                                     <li class="nav-item">
@@ -392,13 +392,16 @@ border-color: #adada2; background-color: #efefef;">
                                                     </div>
                                                     <div class="dz-message needsclick">
                                                         <i class="h1 text-muted dripicons-cloud-upload"></i>
-                                                        <p>Upload your image</p>
+                                                        <p>Upload your image *</p>
+                                                        <p class="text-muted small">
+                                                            We recommend 700x900px
+                                                        </p>
                                                     </div>
                                                 </form>                                   
                                             </div>
                                             <div class="col-lg-6">
                                                 <div class="form-group mb-3">
-                                                    <label for="simpleinput">Link URL</label>
+                                                    <label for="simpleinput">Add Link URL <span class="badge badge-light badge-pill" data-toggle="tooltip" data-placement="right" title="" data-original-title="Add a link that you'd like your employees to have access to. It could be anything fom your internal wiki, a google calendar or another product you use.">?</span></label>
                                                     <input type="text" id="simpleinput" class="form-control">
                                                 </div>
                                                 <div class="form-group mb-3">
@@ -418,16 +421,17 @@ border-color: #adada2; background-color: #efefef;">
                                                     <div class="dz-message needsclick">
                                                         <i class="h1 text-muted dripicons-cloud-upload"></i>
                                                         <p>Upload a thumbnail for your video</p>
+                                                        <p class="small text-light">If you don't, we'll just use the first frame of your video as the thumbnail</p>
                                                     </div>
                                                 </form>                                   
                                             </div>
                                             <div class="col-lg-6">
                                                 <div class="form-group mb-3">
-                                                    <label for="simpleinput">Video URL</label>
+                                                    <label for="simpleinput">Vimeo or Youtube URL* <span class="badge badge-light badge-pill" data-toggle="tooltip" data-placement="right" title="" data-original-title="Copy and paste in your link from Youtube or Vimeo and we'll let the video play on your homepage">?</span></label>
                                                     <input type="text" id="simpleinput" class="form-control">
                                                 </div>
                                                 <div class="form-group mb-3">
-                                                    <label for="example-textarea">Description</label>
+                                                    <label for="example-textarea">Description <span class="badge badge-light badge-pill" data-toggle="tooltip" data-placement="right" title="" data-original-title="Feel free to write a description that will be shown to all your employees underneath your video">?</span></label>
                                                     <textarea class="form-control" id="example-textarea" rows="5"></textarea>
                                                 </div>                                      
                                             </div>
@@ -437,7 +441,7 @@ border-color: #adada2; background-color: #efefef;">
                             </div>
                             <div class="modal-footer">
                                 <a href="" class="btn btn-light waves-effect waves-light" style="background-color: #fff; color: #3D3D36;" id="btn-archive">Save as draft</a>
-                                <a href="" class="btn btn-warning waves-effect waves-light" style="color: #3D3D36" id="btn-archive">Save and publish</a>
+                                <a href="" class="btn btn-warning waves-effect waves-light" style="color: #3D3D36" id="btn-archive">Save and publish to all</a>
                             </div>
                         </div>
 <!-- /.modal-content -->
@@ -620,7 +624,7 @@ border-color: #adada2; background-color: #efefef;">
                             <div class="card-body">
                                 <div class="mx-auto">
                                     <h3 class="card-title mb-2 pt-3" style="font-family: dosis;">Got important news to share with your company?</h3>
-                                    <p>Add a link or video to the homepage for all your employees to see</p>
+                                    <p>Add an image, link or video to the homepage for all your employees to see</p>
                                         <button onclick="replace();return false"/ type="button" class="btn btn-warning waves-effect waves-light mt-2 mb-5" style="color: #3D3D36">Add link or video</button> 
                                 </div>
                             </div>
@@ -636,7 +640,7 @@ border-color: #adada2; background-color: #efefef;">
                             <div class="card-body">
                                 <div class="mx-auto">
                                     <i class="fas fa-plus mt-5"></i> 
-                                    <p class="mb-5 mt-2">Add link or video</p>
+                                    <p class="mb-5 mt-2">Add image, link or video</p>
                                 </div>
                             </div>
                         </div>
@@ -646,7 +650,7 @@ border-color: #adada2; background-color: #efefef;">
                             <div class="card-body">
                                 <div class="mx-auto">
                                     <i class="fas fa-plus mt-5"></i> 
-                                    <p class="mb-5 mt-2">Add link or video</p>
+                                    <p class="mb-5 mt-2">Add image, link or video</p>
                                 </div>
                             </div>
                         </div>
@@ -656,7 +660,7 @@ border-color: #adada2; background-color: #efefef;">
                             <div class="card-body">
                                 <div class="mx-auto">
                                     <i class="fas fa-plus mt-5"></i> 
-                                    <p class="mb-5 mt-2">Add link or video</p>
+                                    <p class="mb-5 mt-2">Add image, link or video</p>
                                 </div>
                             </div>
                         </div>
