--- a/app/views/admin_pages/managecompany3.html.erb
+++ b/app/views/admin_pages/managecompany3.html.erb
@@ -405,7 +405,7 @@ border-color: #adada2; background-color: #efefef;">
                                                     <input type="text" id="simpleinput" class="form-control">
                                                 </div>
                                                 <div class="form-group mb-3">
-                                                    <label for="example-textarea">Description</label>
+                                                    <label for="example-textarea">Description <span class="badge badge-light badge-pill" data-toggle="tooltip" data-placement="right" title="" data-original-title="Feel free to write an informative description that will be shown to all your employees underneath your image">?</span></label>
                                                     <textarea class="form-control" id="example-textarea" rows="5"></textarea>
                                                 </div>                                      
                                             </div>
@@ -431,7 +431,7 @@ border-color: #adada2; background-color: #efefef;">
                                                     <input type="text" id="simpleinput" class="form-control">
                                                 </div>
                                                 <div class="form-group mb-3">
-                                                    <label for="example-textarea">Description <span class="badge badge-light badge-pill" data-toggle="tooltip" data-placement="right" title="" data-original-title="Feel free to write a description that will be shown to all your employees underneath your video">?</span></label>
+                                                    <label for="example-textarea">Description <span class="badge badge-light badge-pill" data-toggle="tooltip" data-placement="right" title="" data-original-title="Feel free to write an informative description that will be shown to all your employees underneath your video">?</span></label>
                                                     <textarea class="form-control" id="example-textarea" rows="5"></textarea>
                                                 </div>                                      
                                             </div>
@@ -440,7 +440,7 @@ border-color: #adada2; background-color: #efefef;">
                                 </div>
                             </div>
                             <div class="modal-footer">
-                                <a href="" class="btn btn-light waves-effect waves-light" style="background-color: #fff; color: #3D3D36;" id="btn-archive">Save as draft</a>
+                                <a href="" class="btn btn-light waves-effect waves-light" style="background-color: #fff; color: #3D3D36;" id="btn-archive">Save and preview as draft</a>
                                 <a href="" class="btn btn-warning waves-effect waves-light" style="color: #3D3D36" id="btn-archive">Save and publish to all</a>
                             </div>
                         </div>
