--- a/app/views/admin_pages/managecompany3.html.erb
+++ b/app/views/admin_pages/managecompany3.html.erb
@@ -392,7 +392,7 @@ border-color: #adada2; background-color: #efefef;">
                                                     </div>
                                                     <div class="dz-message needsclick">
                                                         <i class="h1 text-muted dripicons-cloud-upload"></i>
-                                                        <p>Upload your image *</p>
+                                                        <p>Upload your image <span style="color: red;">*</span></p>
                                                         <p class="text-muted small">
                                                             We recommend 700x900px
                                                         </p>
@@ -427,7 +427,7 @@ border-color: #adada2; background-color: #efefef;">
                                             </div>
                                             <div class="col-lg-6">
                                                 <div class="form-group mb-3">
-                                                    <label for="simpleinput">Vimeo or Youtube URL* <span class="badge badge-light badge-pill" data-toggle="tooltip" data-placement="right" title="" data-original-title="Copy and paste in your link from Youtube or Vimeo and we'll let the video play on your homepage">?</span></label>
+                                                    <label for="simpleinput">Vimeo or Youtube URL <span style="color: red;">*</span><span class="badge badge-light badge-pill" data-toggle="tooltip" data-placement="right" title="" data-original-title="Copy and paste in your link from Youtube or Vimeo and we'll let the video play on your homepage">?</span></label>
                                                     <input type="text" id="simpleinput" class="form-control">
                                                 </div>
                                                 <div class="form-group mb-3">
